Update generated types with new endpoints
