# scripts/openapi.json
@@ -1001,7 +1001,7 @@
     "/api/companies/{company_pk}/api-tokens/": {
       "post": {
         "tags": [
-          "api_tokens"
+          "company_api_tokens"
         ],
         "summary": "Create",
         "operationId": "Create API token",
@@ -1082,7 +1082,7 @@
       },
       "get": {
         "tags": [
-          "api_tokens"
+          "company_api_tokens"
         ],
         "summary": "List Tokens",
         "operationId": "List API tokens",
@@ -1159,7 +1159,7 @@
     "/api/companies/{company_pk}/api-tokens/{token_uid}/": {
       "delete": {
         "tags": [
-          "api_tokens"
+          "company_api_tokens"
         ],
         "summary": "Delete Token",
         "operationId": "Delete API token",
@@ -1234,6 +1234,294 @@
             }
           }
         }
+      },
+      "patch": {
+        "tags": [
+          "company_api_tokens"
+        ],
+        "summary": "Update",
+        "operationId": "Update API token",
+        "security": [
+          {
+            "HTTPBearer": []
+          },
+          {
+            "APIKeyHeader": []
+          }
+        ],
+        "parameters": [
+          {
+            "name": "company_pk",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "title": "Company Pk",
+              "pattern": "^Company-[a-f0-9]{8}-[a-f0-9]{4}-4[a-f0-9]{3}-[89ab][a-f0-9]{3}-[a-f0-9]{12}$",
+              "example": "Company-8ccfcc01-da99-4f5a-8ad7-946d6a6f48f5",
+              "type": "string"
+            }
+          },
+          {
+            "name": "token_uid",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "title": "Token Uid",
+              "type": "string"
+            }
+          },
+          {
+            "name": "parent_pk",
+            "in": "query",
+            "required": false,
+            "schema": {
+              "title": "Parent Pk",
+              "type": "string"
+            }
+          },
+          {
+            "name": "identity",
+            "in": "cookie",
+            "required": false,
+            "schema": {
+              "title": "Identity",
+              "type": "string"
+            }
+          }
+        ],
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/UpdateToken"
+              }
+            }
+          }
+        },
+        "responses": {
+          "200": {
+            "description": "Successful Response",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/MaskedToken"
+                }
+              }
+            }
+          },
+          "404": {
+            "description": "Not found"
+          },
+          "422": {
+            "description": "Validation Error",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/HTTPValidationError"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/api/companies/{company_pk}/api-tokens/{token_uid}/logs/": {
+      "get": {
+        "tags": [
+          "company_api_tokens"
+        ],
+        "summary": "Logs",
+        "operationId": "Get Token Logs",
+        "security": [
+          {
+            "HTTPBearer": []
+          },
+          {
+            "APIKeyHeader": []
+          }
+        ],
+        "parameters": [
+          {
+            "name": "company_pk",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "title": "Company Pk",
+              "pattern": "^Company-[a-f0-9]{8}-[a-f0-9]{4}-4[a-f0-9]{3}-[89ab][a-f0-9]{3}-[a-f0-9]{12}$",
+              "example": "Company-8ccfcc01-da99-4f5a-8ad7-946d6a6f48f5",
+              "type": "string"
+            }
+          },
+          {
+            "name": "token_uid",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "title": "Token Uid",
+              "type": "string"
+            }
+          },
+          {
+            "name": "start_time_ms",
+            "in": "query",
+            "required": false,
+            "schema": {
+              "title": "Start Time Ms",
+              "type": "integer"
+            }
+          },
+          {
+            "name": "end_time_ms",
+            "in": "query",
+            "required": false,
+            "schema": {
+              "title": "End Time Ms",
+              "type": "integer"
+            }
+          },
+          {
+            "name": "limit",
+            "in": "query",
+            "required": false,
+            "schema": {
+              "title": "Limit",
+              "type": "integer"
+            }
+          },
+          {
+            "name": "next_token",
+            "in": "query",
+            "required": false,
+            "schema": {
+              "title": "Next Token",
+              "type": "string"
+            }
+          },
+          {
+            "name": "parent_pk",
+            "in": "query",
+            "required": false,
+            "schema": {
+              "title": "Parent Pk",
+              "type": "string"
+            }
+          },
+          {
+            "name": "identity",
+            "in": "cookie",
+            "required": false,
+            "schema": {
+              "title": "Identity",
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Successful Response",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/Logs"
+                }
+              }
+            }
+          },
+          "404": {
+            "description": "Not found"
+          },
+          "422": {
+            "description": "Validation Error",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/HTTPValidationError"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/api/token/": {
+      "get": {
+        "tags": [
+          "api_token"
+        ],
+        "summary": "Get Token Api",
+        "operationId": "Get token info",
+        "responses": {
+          "200": {
+            "description": "Successful Response",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/MaskedToken"
+                }
+              }
+            }
+          },
+          "404": {
+            "description": "Not found"
+          }
+        },
+        "security": [
+          {
+            "APIKeyHeader": []
+          }
+        ]
+      }
+    },
+    "/api/token/logs": {
+      "post": {
+        "tags": [
+          "api_token"
+        ],
+        "summary": "Submit Log",
+        "operationId": "Submit logs for token",
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "title": "Logs",
+                "type": "array",
+                "items": {
+                  "$ref": "#/components/schemas/SubmitLogEvent"
+                }
+              }
+            }
+          },
+          "required": true
+        },
+        "responses": {
+          "200": {
+            "description": "Successful Response",
+            "content": {
+              "application/json": {
+                "schema": {}
+              }
+            }
+          },
+          "404": {
+            "description": "Not found"
+          },
+          "422": {
+            "description": "Validation Error",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/HTTPValidationError"
+                }
+              }
+            }
+          }
+        },
+        "security": [
+          {
+            "APIKeyHeader": []
+          }
+        ]
       }
     },
     "/api/companies/{company_pk}/suggestions/": {
@@ -7534,6 +7822,11 @@
           "name": {
             "title": "Name",
             "type": "string"
+          },
+          "config": {
+            "title": "Config",
+            "type": "string",
+            "default": ""
           }
         }
       },
@@ -8591,6 +8884,29 @@
           }
         }
       },
+      "LogEvent": {
+        "title": "LogEvent",
+        "required": [
+          "timestamp",
+          "message",
+          "ingestionTime"
+        ],
+        "type": "object",
+        "properties": {
+          "timestamp": {
+            "title": "Timestamp",
+            "type": "integer"
+          },
+          "message": {
+            "title": "Message",
+            "type": "string"
+          },
+          "ingestionTime": {
+            "title": "Ingestiontime",
+            "type": "integer"
+          }
+        }
+      },
       "LoginRequest": {
         "title": "LoginRequest",
         "required": [
@@ -8628,6 +8944,32 @@
           },
           "session": {
             "title": "Session",
+            "type": "string"
+          }
+        }
+      },
+      "Logs": {
+        "title": "Logs",
+        "required": [
+          "events",
+          "nextForwardToken",
+          "nextBackwardToken"
+        ],
+        "type": "object",
+        "properties": {
+          "events": {
+            "title": "Events",
+            "type": "array",
+            "items": {
+              "$ref": "#/components/schemas/LogEvent"
+            }
+          },
+          "nextForwardToken": {
+            "title": "Nextforwardtoken",
+            "type": "string"
+          },
+          "nextBackwardToken": {
+            "title": "Nextbackwardtoken",
             "type": "string"
           }
         }
@@ -8685,7 +9027,8 @@
         "required": [
           "name",
           "id",
-          "company"
+          "company",
+          "config"
         ],
         "type": "object",
         "properties": {
@@ -8699,6 +9042,10 @@
           },
           "company": {
             "title": "Company",
+            "type": "string"
+          },
+          "config": {
+            "title": "Config",
             "type": "string"
           }
         }
@@ -9496,6 +9843,24 @@
           }
         }
       },
+      "SubmitLogEvent": {
+        "title": "SubmitLogEvent",
+        "required": [
+          "timestamp",
+          "message"
+        ],
+        "type": "object",
+        "properties": {
+          "timestamp": {
+            "title": "Timestamp",
+            "type": "integer"
+          },
+          "message": {
+            "title": "Message",
+            "type": "string"
+          }
+        }
+      },
       "SuccessResponse": {
         "title": "SuccessResponse",
         "required": [
@@ -9631,7 +9996,8 @@
           "name",
           "id",
           "token",
-          "company"
+          "company",
+          "config"
         ],
         "type": "object",
         "properties": {
@@ -9649,6 +10015,24 @@
           },
           "company": {
             "title": "Company",
+            "type": "string"
+          },
+          "config": {
+            "title": "Config",
+            "type": "string"
+          }
+        }
+      },
+      "UpdateToken": {
+        "title": "UpdateToken",
+        "type": "object",
+        "properties": {
+          "name": {
+            "title": "Name",
+            "type": "string"
+          },
+          "config": {
+            "title": "Config",
             "type": "string"
           }
         }
